# rtoml-precommit-hook

./: .pre-commit-hooks.yaml  README.md  check-rtoml.py  setup.cfg
