[metadata]
name = rtoml_precommit_hook 
version = 0.0.1
description = rtoml syntax check 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sognetic/rtoml-precommit-hook
author = Moritz Bauer
author_email = mb@mo2-systems.com

[options]
packages = find:
install_requires =
    rtoml
python_requires = >=3.8
